--- a/app/src/main/res/layout/titlebar.xml
+++ b/app/src/main/res/layout/titlebar.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="50dp"
+              android:layout_height="wrap_content"
               android:background="@android:color/holo_blue_light"
-              android:padding="5dp"
- >
+              android:padding="10dp">
+
 
     <TextView
         android:id="@+id/tv_search_home"
