--- a/app/src/main/res/layout/titlebar.xml
+++ b/app/src/main/res/layout/titlebar.xml
@@ -4,10 +4,12 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@android:color/holo_blue_light"
-              android:padding="10dp">
+              android:padding="10dp"
+              android:focusable="true"
+              android:focusableInTouchMode="true">
 
 
-    <TextView
+    <EditText
         android:id="@+id/tv_search_home"
         android:layout_width="match_parent"
         android:layout_height="35dp"
@@ -16,9 +18,12 @@
         android:background="@drawable/search_home_shape"
         android:drawableLeft="@drawable/home_search_icon"
         android:drawablePadding="10dp"
-        android:text="输入搜索信息"
+        android:hint="输入搜索信息"
         android:padding="5dp"
         android:layout_weight="1"
-        android:textSize="13sp"
+        android:textSize="15sp"
+        android:singleLine="true"
+
         />
+
 </LinearLayout>
