--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -14,7 +14,7 @@
         android:background="#FFFFFF">
     <ImageView
         android:layout_centerVertical="true"
-        android:src="@drawable/mes_Already"
+        android:src="@drawable/mes_already"
         android:layout_width="30dp"
         android:layout_height="30dp"  />
 
@@ -27,7 +27,7 @@
             android:textSize="20sp"/>
         <ImageView
             android:layout_alignParentRight="true"
-            android:src="@drawable/mes_Arrow"
+            android:src="@drawable/mes_arrow"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_centerVertical="true"/>
@@ -40,7 +40,7 @@
         android:background="#FFFFFF">
         <ImageView
             android:layout_centerVertical="true"
-            android:src="@drawable/mes_Receive"
+            android:src="@drawable/mes_receive"
             android:layout_width="30dp"
             android:layout_height="30dp"  />
 
@@ -53,7 +53,7 @@
             android:textSize="20sp"/>
         <ImageView
             android:layout_alignParentRight="true"
-            android:src="@drawable/mes_Arrow"
+            android:src="@drawable/mes_arrow"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_centerVertical="true"/>
@@ -66,7 +66,7 @@
         android:background="#FFFFFF">
         <ImageView
             android:layout_centerVertical="true"
-            android:src="@drawable/mes_Collection"
+            android:src="@drawable/mes_collection"
             android:layout_width="30dp"
             android:layout_height="30dp"  />
 
@@ -79,7 +79,7 @@
             android:textSize="20sp"/>
         <ImageView
             android:layout_alignParentRight="true"
-            android:src="@drawable/mes_Arrow"
+            android:src="@drawable/mes_arrow"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_centerVertical="true"/>
@@ -92,7 +92,7 @@
         android:background="#FFFFFF">
         <ImageView
             android:layout_centerVertical="true"
-            android:src="@drawable/mes_Release"
+            android:src="@drawable/mes_release"
             android:layout_width="30dp"
             android:layout_height="30dp"  />
 
@@ -106,7 +106,7 @@
             android:textSize="20sp"/>
         <ImageView
             android:layout_alignParentRight="true"
-            android:src="@drawable/mes_Arrow"
+            android:src="@drawable/mes_arrow"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_centerVertical="true"/>
