--- a/app/src/main/res/layout/new_item.xml
+++ b/app/src/main/res/layout/new_item.xml
@@ -2,28 +2,95 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="wrap_content"
-              android:layout_height="wrap_content">
+              android:layout_height="wrap_content"
+               >
 <ImageView
     android:id="@+id/iv_photo"
     android:layout_width="70dp"
     android:layout_height="85dp"
     android:src="@drawable/user1"
-    android:layout_alignParentLeft="true"/>
+    android:layout_alignParentLeft="true"
+    android:layout_marginLeft="3dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="消息主题："
-        android:textSize="12sp"
+        android:textSize="14sp"
         android:layout_toRightOf="@+id/iv_photo"
         android:layout_alignParentTop="true"
         android:id="@+id/tv_theme"
         android:textColor="#000"
         />
     <TextView
+        android:id="@+id/tv_Theme"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="阿里云招聘大会"
+        android:textSize="14sp"
+        android:textColor="#f00"
+          android:layout_toRightOf="@+id/tv_theme"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="消息内容："
+        android:textSize="12sp"
+        android:layout_alignLeft="@+id/tv_theme"
+         android:layout_below="@+id/tv_theme"
+        android:id="@+id/tv_content"
+        android:textColor="#000"
+        />
+    <TextView
+        android:id="@+id/tv_Content"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:text="面向大四毕业的学生，时间2017年12月3号，地点创业园，希望软件学院的同学踊跃参加"
+        android:textSize="12sp"
+        android:layout_toRightOf="@+id/tv_content"
+        android:layout_below="@+id/tv_theme"/>
 
 
+  <ImageView
+      android:layout_width="match_parent"
+      android:layout_height="2dp"
+      android:background="#eeee"
+      android:layout_below="@+id/iv_photo"/>
+    <ImageView
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:src="@drawable/userphoto"
+        android:layout_toRightOf="@+id/iv_photo"
+        android:layout_marginTop="70dp"
+         android:id="@+id/iv_users"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+         android:layout_toRightOf="@+id/iv_users"
+        android:text="马化腾"
+        android:textSize="10dp"
+        android:layout_marginTop="68dp"
+        android:textColor="#000"
+        android:id="@+id/tv_name"
+        />
+    <ImageView
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:src="@drawable/phone"
+        android:layout_marginTop="70dp"
+        android:layout_toRightOf="@+id/tv_content"
+        android:layout_marginLeft="120dp"
+        android:id="@+id/iv_phone"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/iv_phone"
+        android:text="17377855451"
+        android:textSize="10dp"
+        android:layout_marginTop="68dp"
+     android:id="@+id/tv_phone"
+        android:textColor="#000"
+        />
 
 
 
