--- a/app/src/main/res/layout/new_view.xml
+++ b/app/src/main/res/layout/new_view.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="#eeee"
+              android:background="#fff"
               android:orientation="vertical"
               android:padding="10dp">
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical">
@@ -21,7 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:text="最新消息分享"
-            android:textColor="#000" />
+
+            android:textColor="#f00" />
 
         <TextView
             android:id="@+id/tv_more_hot"
@@ -39,7 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="270dp"
         android:layout_marginTop="10dp"
-        android:horizontalSpacing="10dp"
+        android:horizontalSpacing="2dp"
         android:numColumns="1"
-        android:verticalSpacing="10dp"></GridView>
+        android:verticalSpacing="2dp"></GridView>
 </LinearLayout>
