--- a/app/src/main/res/layout/mes_release.xml
+++ b/app/src/main/res/layout/mes_release.xml
@@ -34,12 +34,35 @@
         app:layout_constraintVertical_bias="1.0"
         android:textSize="18sp"
         android:layout_marginEnd="16dp" />
+    <LinearLayout
+        android:id="@+id/layout_mes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#fff"
+        android:orientation="vertical"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="44dp"
+        >
 
+        <EditText
+            android:id="@+id/mes_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="消息主题..."
+            android:padding="10dp"
+            android:textSize="17sp"
+            android:background="#fff"
+            android:gravity="start"
+            android:singleLine="true"/>
+    </LinearLayout>
     <EditText
         android:layout_width="0dp"
         android:layout_height="300dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="2dp"
         android:background="#fff"
         android:hint="描述一下消息..."
         android:gravity="start"
@@ -47,27 +70,24 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_mes"
         app:layout_constraintVertical_bias="0.0"
         android:paddingLeft="10dp"
         android:paddingTop="10dp"
-        android:id="@+id/editText" />
+        android:id="@+id/editText"
+        android:textSize="17sp"/>
+
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#fff"
         android:orientation="vertical"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
         app:layout_constraintHorizontal_bias="1.0"
-        android:background="#fff">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#eeee" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText"
+        android:layout_marginTop="2dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
