--- a/app/src/main/res/layout/hot_view.xml
+++ b/app/src/main/res/layout/hot_view.xml
@@ -2,12 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="#fff"
               android:orientation="vertical"
               android:padding="10dp">
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical">
@@ -15,15 +13,14 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/home_arrow_left_flash" />
+            android:src="@drawable/home_arrow_left_hot" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:text="最新消息分享"
-
-            android:textColor="#2e32b2" />
+            android:text="最热消息分享"
+            android:textColor="#f00" />
 
         <TextView
             android:id="@+id/tv_more_hot"
@@ -37,11 +34,11 @@
     </LinearLayout>
 
     <GridView
-        android:id="@+id/gv_new"
+        android:id="@+id/gv_hot"
         android:layout_width="match_parent"
-        android:layout_height="270dp"
+        android:layout_height="275dp"
         android:layout_marginTop="10dp"
-        android:horizontalSpacing="2dp"
+        android:horizontalSpacing="10dp"
         android:numColumns="1"
-        android:verticalSpacing="2dp"></GridView>
+        android:verticalSpacing="10dp"></GridView>
 </LinearLayout>
