--- a/app/src/main/res/layout/hot_view.xml
+++ b/app/src/main/res/layout/hot_view.xml
@@ -38,7 +38,6 @@
         android:layout_width="match_parent"
         android:layout_height="275dp"
         android:layout_marginTop="10dp"
-        android:horizontalSpacing="10dp"
         android:numColumns="1"
-        android:verticalSpacing="10dp"></GridView>
+></GridView>
 </LinearLayout>
