--- a/app/src/main/res/layout/new_item.xml
+++ b/app/src/main/res/layout/new_item.xml
@@ -4,13 +4,14 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
                >
-<ImageView
-    android:id="@+id/iv_photo"
-    android:layout_width="70dp"
-    android:layout_height="85dp"
-    android:src="@drawable/user1"
-    android:layout_alignParentLeft="true"
-    android:layout_marginLeft="1dp"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="70dp"
+        android:layout_height="85dp"
+        android:id="@+id/iv_photo"
+        android:src="@drawable/user1"
+        app:civ_border_width="1dp"
+        app:civ_border_color="#FF000000"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
