--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -13,12 +13,46 @@
         android:horizontalSpacing="10dp"
         android:numColumns="1"
         android:background="#fff"></GridView>
-    <TextView
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="最近浏览"/>
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
+        <TextView
+
+            android:layout_marginLeft="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="最近浏览"/>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp">
+            <TextView
+                android:id="@+id/more"
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="查看更多" />
+
+            <ImageView
+                android:layout_width="14dp"
+                android:layout_height="14dp"
+                android:src="@drawable/mes_arrow"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/more"/>
+        </RelativeLayout>
+
+    </RelativeLayout>
+    <GridView
+        android:id="@+id/mes_grid2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:horizontalSpacing="10dp"
+        android:numColumns="1"
+        android:background="#fff"
+        android:layout_marginTop="12dp"></GridView>
 
 
 
