--- a/app/src/main/res/layout/mes_item.xml
+++ b/app/src/main/res/layout/mes_item.xml
@@ -20,7 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
             android:text="我已发布"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:textColor="#000"/>
         <ImageView
             android:layout_alignParentRight="true"
             android:src="@drawable/mes_arrow"
